...
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintLeft_toRightOf="@+id/icon_ingredients"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>

        <android.support.v7.widget.RecyclerView
          android:id="@+id/ingredient_list"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:layout_marginBottom="8dp"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="8dp"
...
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintLeft_toRightOf="@+id/icon_steps"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>

        <android.support.v7.widget.RecyclerView
          android:id="@+id/step_list"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:layout_marginBottom="8dp"
          app:layoutManager="LinearLayoutManager"
          app:layout_constraintBottom_toBottomOf="parent"
...
