...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_player"
        app:layout_constraintVertical_bias="0.0"
        card_view:cardCornerRadius="4dp">

        <TextView
          android:id="@+id/text_step"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="16dp"
          android:text="masak air secukupnya, lalu tuangkan minyak panas. Aduk aduk hingga merata. apabila sudah cukup matang angat dari wajan, diamkan di penggorengan hingga kita semua sudah tidak lapar lagi lalu makan dengan segera. jangan lupa tambahkan minyak wijen dan bawang goreng. makanan pun sudah siap saji dan siap dilemparkan ke muka tetangga."
          android:textSize="16sp"/>

...
